--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,16 +1,11 @@
 # \uD504\uB85C\uD544
-spring.profiles.active=local
+spring.profiles.active=test
 
 # jpa
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-# \uB370\uC774\uD130 \uC18C\uC2A4
-spring.datasource.url=jdbc:mysql://localhost:3306/CAPSTONE_DEVELOP?autoReconnect=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=NewSt@rt!70
 
 # \uD2B8\uB79C\uC7AD\uC158
 logging.level.org.springframework.transaction.interceptor=TRACE
