--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.profiles.active=local
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # \uB370\uC774\uD130 \uC18C\uC2A4
 spring.datasource.url=jdbc:mysql://localhost:3306/CAPSTONE_DEVELOP?autoReconnect=true&serverTimezone=Asia/Seoul
@@ -16,3 +16,7 @@ spring.datasource.password=NewSt@rt!70
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.hibernate.resource.transaction=DEBUG
+
+# Jwt
+jwt.token.secret-key=VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+jwt.token.expire-length=3600000
