chore: 개발 환경 DB 마이그레이션
*style: 성별 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,16 @@ spring.profiles.active=local
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 # \uB370\uC774\uD130 \uC18C\uC2A4
 spring.datasource.url=jdbc:mysql://localhost:3306/CAPSTONE_DEVELOP?autoReconnect=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=NewSt@rt!70
+
+# data init
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:db/init.sql
 
 # \uD2B8\uB79C\uC7AD\uC158
 logging.level.org.springframework.transaction.interceptor=TRACE
