--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ logging.level.org.hibernate.resource.transaction=DEBUG
 # Jwt
 jwt.token.secret-key=VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
 jwt.token.expire-length=3600000
+
+# Redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
