chore: UploadFile 환경 셋팅

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.org.hibernate.resource.transaction=DEBUG
 # Jwt
 jwt.token.secret-key=VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
 jwt.token.expire-length=3600000
+
+# upload
+file.dir=test
