--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ jwt.token.secret-key=VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
 jwt.token.expire-length=3600000
 
 # upload
-file.dir=C:/Users/hsb99/X-song/assignmenting/
+file.dir=C:/Users/hsb99/
